--- a/roles/spamcap/molecule/default/tests/test_default.yml
+++ b/roles/spamcap/molecule/default/tests/test_default.yml
@@ -1,8 +1,10 @@
-# Molecule managed
-
 ---
 file:
-  /etc/hosts:
+  /etc/postfix/master.cf:
     exists: true
     owner: root
     group: root
+
+port:
+  tcp:25:
+    listening: true
