--- a/roles/spamcap/tasks/main.yml
+++ b/roles/spamcap/tasks/main.yml
@@ -3,8 +3,8 @@
 - name: Install postfix
   include_tasks: install_postfix.yml
 
-- name: Install PHP
-  include_tasks: install_php.yml
+#- name: Install PHP
+#  include_tasks: install_php.yml
 
 - name: Configure postfix with hook
   include_tasks: config_postfix.yml
