--- a/roles/spamcap/tasks/main.yml
+++ b/roles/spamcap/tasks/main.yml
@@ -1,4 +1,46 @@
 ---
+- name: Install Python 3
+  package:
+    name: ['python3', 'python3-pip']
+  become: true
+
+- name: Create hook user
+  user:
+    name: '{{ hook_user }}'
+    comment: 'Spamcap'
+  become: true
+
+- name: Make root directory for hook
+  file:
+    path: '{{ root_dir }}'
+    owner: '{{ hook_user }}'
+    group: '{{ hook_user }}'
+    state: directory
+    mode: '0777'
+  become: true
+
+- name: Copy hook script
+  copy:
+    src: 'files/{{ hook_file }}'
+    dest: '{{ root_dir }}/{{ hook_file }}'
+    mode: 0700
+    owner: '{{ hook_user }}'
+    group: '{{ hook_user }}'
+  become: true
+
+- name: Copy requirements.txt
+  copy:
+    src: 'files/requirements.txt'
+    dest: '{{ root_dir }}/requirements.txt'
+    owner: '{{ hook_user }}'
+    group: '{{ hook_user }}'
+  become: true
+
+- name: Install Python dependencies
+  pip:
+    requirements: '{{ root_dir }}/requirements.txt'
+  become: true
+
 # tasks file for spamcap
 - name: Install postfix
   include_tasks: install_postfix.yml
