--- a/roles/spamcap/tasks/main.yml
+++ b/roles/spamcap/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install Python 3
   apt:
-    name: ['python3', 'python3-pip']
+    name: ['python3', 'python3-pip', 'python3-dev','build-essential', python-setuptools]
   become: true
 
 - name: Create hook user
